--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            {% include "portfolio/includes/allocation_table.html" with mode="dollar" read_only=True table_id="dashboard-table-dollar" id_prefix="dash-money-" %}
+                            {% include "portfolio/includes/allocation_table_simple.html" with rows=allocation_rows_money mode="dollar" table_id="dashboard-table-dollar" %}
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                             {% include "portfolio/includes/allocation_table.html" with mode="percent" read_only=True table_id="dashboard-table-percent" id_prefix="dash-pct-" %}
+                             {% include "portfolio/includes/allocation_table_simple.html" with rows=allocation_rows_percent mode="percent" table_id="dashboard-table-percent" %}
                         </div>
                     </div>
                 </div>
