--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -1,8 +1,6 @@
 {% extends "portfolio/base.html" %}
-{% load portfolio_extras %}
-{% load humanize %}
 
-{% block title %}Dashboard - Portfol{% endblock %}
+{% block title %}Dashboard | CB3 Portfolio{% endblock %}
 
 {% block content %}
 {% with account_count=account_types|length %}
