refactor: instance services, consolidate filters, tighten user typing

--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -1,5 +1,5 @@
 {% extends "portfolio/base.html" %}
-{% load portfolio_extras %}
+{% load portfolio_filters %}
 
 {% block title %}Holdings | CB3 Portfolio{% endblock %}
 
