--- a/portfolio/templates/portfolio/sidebar.html
+++ b/portfolio/templates/portfolio/sidebar.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-{% load portfolio_extras %}
+{% load portfolio_filters %}
 
 <div class="sidebar">
     <div class="sidebar-header mb-3">
